updated router routes to include router props

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- MATERIAL-UI LINKS
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" /> -->
+    <!-- MATERIALIZE LINKS -->
+      <!-- Import Google Icon Font
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Import materialize.css -->
+    <!-- <link href="CDN OR PATH TO NODE_MODULES.css" rel="stylesheet"> --> -->
     <title>JP&K Embellishments</title>
   </head>
   <body>
